5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1745_1528.log
== TEST (2019-05-15 14:14:40) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= int(input())
ValueError: invalid literal for int() with base 10: '0.89'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:09) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	c= c+1	
print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:23) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	c= c+1	
print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:38) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	k= c+1	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:48) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	k= c+1	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:18) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	k= c+1	
print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:33) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h<c):
	x= (h-g)+a
	k= c+1	
print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:17:06) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h==0):
	x= (h-g)+a
	c= c+1	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:17:18) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h==0):
	x= (h-g)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:17:39) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll

while (h==0):
	x= (h-g)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:20:06) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h==x):
	x= (h-l)+a
	k= c+1	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:20:19) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h==x):
	x= (h-l)+a
	k= c+1	
	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:04) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	x= (h-l)+a
	k= c+1	
	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:05) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h==x):
	x= (h-l)+a
	k= c+1	
	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:00) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:09) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:35) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 1 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:01) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:12) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:27) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:25:34) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.158992
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
12
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
2
---- user output:
1
2
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:40) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:17) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	k= c+1	
	print(k)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:41) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
	print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:14) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:27:25) 
-- CODE:
g= int(input())
h= float(input())
a= float(input())
c= 0 #rodadas
x= 0 #forcadotroll
l= g*5

while (h>x):
	h= (h-l)+a
	c= c+1	
print(c)
	
	
	
	
	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.182991
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
12
---- user output:
12
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
